feat: US-032 - Retry Once and Support Resume